Fix quiz question text visibility on light backgrounds

--- a/education/apa-spex-shoulder-course/stylesheets/quiz.css
+++ b/education/apa-spex-shoulder-course/stylesheets/quiz.css
@@ -31,6 +31,15 @@
     font-size: 1.1em;
     font-weight: 500;
     margin: 1em 0;
+    color: #1f2937;
+}
+
+[data-md-color-scheme="slate"] .quiz-question {
+    color: #e5e7eb;
+}
+
+.quiz-item .quiz-question,
+[data-md-color-scheme="slate"] .quiz-item .quiz-question {
     color: #ffffff;
 }
 
